examples/invalid/init_class_with_args.atom
class Test {
    let name;
}

fn main() {
    Test("hello world");
}
